Task instance Java/105